--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lightbox2": "^2.9.0",
-    "normalize-css": "^2.3.1",
-    "video.js": "^5.19.1"
+    "normalize-css": "^2.3.1"
   },
   "dependencies": {}
 }
